objects/vlocity_ins__ExpandedInteractionLog__c.object
<CustomObject>
    <description>The Expanded Interaction Log is generated as an expanded and normalized version of the Console Action Log.  It tracks statistics about the user clickstream events that happened during the interaction and serves as the collection of events stored in child Event During Interaction records.</description>
    <fields>
        <fullName>vlocity_ins__AccountsReferenced__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accounts Referenced</label>
        <length>10240</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AgentInteractionCt__c</fullName>
        <description>Merge sequence-service operator for easy searching.</description>
        <formula>TEXT(vlocity_ins__NumberOfInteractionsLogged__c) &amp; &quot;-&quot; &amp;  vlocity_ins__ServiceOperatorUserId__c</formula>
        <label>Agent Interaction Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AvgTimeBetweenEvents__c</fullName>
        <label>Average Time Between Events</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClientContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expanded Interaction Logs</relationshipLabel>
        <relationshipName>Expanded_Interaction_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CumulativeAgentInteractionSeconds__c</fullName>
        <label>Cumulative Agent Interaction Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InteractionEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Interaction End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InteractionHandedOffToId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expanded Interaction Log Handed To</label>
        <referenceTo>vlocity_ins__ExpandedInteractionLog__c</referenceTo>
        <relationshipLabel>Expanded Interaction Logs</relationshipLabel>
        <relationshipName>Expanded_Interaction_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InteractionStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Interaction Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LengthOfInteSec__c</fullName>
        <label>Length Of Interaction in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MostRelevantRecordType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Most Relevant Record Type</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfInteractionsLogged__c</fullName>
        <label>Number Of Interactions Logged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderOfEvents__c</fullName>
        <description>This is the order of events for the particular interaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Of Events</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionsViewed__c</fullName>
        <description>Comma separated list of promotions/offers viewed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PromotionsViewed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RawInteraction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Console Action Log</label>
        <referenceTo>vlocity_ins__ConsoleActionLog__c</referenceTo>
        <relationshipLabel>Expanded Interaction Logs</relationshipLabel>
        <relationshipName>Expanded_Interaction_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypesAccessed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Types Accessed</label>
        <length>10240</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecondsOnHold__c</fullName>
        <label>Seconds On Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServiceOperatorUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Operator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expanded_Interaction_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValueOfInteraction__c</fullName>
        <label>Value of Interaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expanded Interaction Log</label>
    <nameField>
        <displayFormat>EIL-{0000000}</displayFormat>
        <label>Expanded Interaction Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expanded Interaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>